--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles/main.css">
+    <title>Wak</title>
+
+</head>
+<body>
+    <a href="projects.html"></a>
+</body>
+</html>
