--- a/wga.html
+++ b/wga.html
@@ -3,13 +3,19 @@
 <head>
 
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/projects.css">
+    <link rel="stylesheet" href="styles/wga.css">
     <link rel="icon" href="assets/img/icon.ico">
 
-    <title>Wak</title>
+    <title>Wak Games Assistant</title>
     
 </head>
 <body>
-    <img src="assets/img/sftimg.png" classe="tool">
+
+    <img src="assets/img/sftimg.png" class="tool_img"/>
+
+    <div class="tool_btn">
+        <a href="" class="dl_btn">Download Now</a>
+    </div>
+
 </body>
 </html>
