--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 </head>
 <body>
-    <a href="projects.html">Project</a>
+    <a href="projects.html">
+        Project
+    </a>
 </body>
 </html>
