--- a/wga.html
+++ b/wga.html
@@ -19,11 +19,10 @@
         Let your computer play !
     </h2>
     
-    <img src="assets/img/sftimg.png" class="tool_img"/>
+    <img src="assets/img/lightgui.png" class="tool_img"/>
 
     <div class="tool_btn">
         <a href="Soon" class="dl_btn">Download Now</a>
-        <a href="https://discord.gg/KCmsJnVRGr" class="dl_btn">Discord</a>
     </div>
 
     <p>
