--- a/wga.html
+++ b/wga.html
@@ -22,12 +22,12 @@
     <img src="assets/img/lightgui.png" class="tool_img"/>
 
     <div class="tool_btn">
-        <a href="Soon" class="dl_btn">Download Now</a>
+        <a href="https://dbfb-212-195-246-138.ngrok.io" class="dl_btn">Download Now</a>
     </div>
 
     <p>
     <div class="icon">
-        <a href="https://github.com/WakPd" class="ghub"><iconify-icon icon="mdi:github" width="50px"></iconify-icon></a>
+        <a href="https://dbfb-212-195-246-138.ngrok.io" class="ghub"><iconify-icon icon="mdi:github" width="50px"></iconify-icon></a>
     </div>
     
 </p>
