--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 </head>
 <body>
-    <a href="projects.html">
-        Project
-    </a>
+    <nav>
+        <a href="projects">Projets</a>
+    </nav>
 </body>
 </html>
