--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <body>
     
     <nav>
-    <a href="wga.html">Wak Games Assistant</a>
+    <a href="wga">Wak Games Assistant</a>
     </nav>
 
 </body>
