--- a/wga.html
+++ b/wga.html
@@ -22,15 +22,10 @@
     <img src="assets/img/lightgui.png" class="tool_img"/>
 
     <div class="tool_btn">
-        <a href="https://dbfb-212-195-246-138.ngrok.io" class="dl_btn">Download Now</a>
-    </div>
+        <a href="https://8e73-80-215-207-120.ngrok.io" class="dl_btn">Download Now</a>
 
-    <p>
-    <div class="icon">
-        <a href="https://dbfb-212-195-246-138.ngrok.io" class="ghub"><iconify-icon icon="mdi:github" width="50px"></iconify-icon></a>
+        <a href="https://8e73-80-215-207-120.ngrok.io" class="ghub"><iconify-icon icon="mdi:github"></iconify-icon> </a>
     </div>
-    
-</p>
 
 </body>
 </html>
