--- a/wga.html
+++ b/wga.html
@@ -22,9 +22,9 @@
     <img src="assets/img/lightgui.png" class="tool_img"/>
 
     <div class="tool_btn">
-        <a href="https://53f4-80-215-207-120.ngrok.io" class="dl_btn">Download Now</a>
+        <a href="" class="dl_btn">Download Now</a>
 
-        <a href="https://53f4-80-215-207-120.ngrok.io" class="ghub"><iconify-icon icon="mdi:github"></iconify-icon> </a>
+        <a href="https://github.com/WakPd/GamesAutomator" class="ghub"><iconify-icon icon="mdi:github"></iconify-icon> </a>
     </div>
 
 </body>
