--- a/wga.html
+++ b/wga.html
@@ -22,9 +22,9 @@
     <img src="assets/img/lightgui.png" class="tool_img"/>
 
     <div class="tool_btn">
-        <a href="" class="dl_btn">Download Now</a>
+        <a href="https://github.com/WakPd/WakGamesAutomator/archive/refs/heads/main.zip" class="dl_btn" download="WGA">Download Now</a>
 
-        <a href="https://github.com/WakPd/GamesAutomator" class="ghub"><iconify-icon icon="mdi:github"></iconify-icon> </a>
+        <a href="D:\Divers\Automator\Web\wakpd.github.io" class="ghub"><iconify-icon icon="mdi:github"></iconify-icon> </a>
     </div>
 
 </body>
