--- a/wga.html
+++ b/wga.html
@@ -24,7 +24,7 @@
     <div class="tool_btn">
         <a href="https://github.com/WakPd/WakGamesAutomator/archive/refs/heads/main.zip" class="dl_btn" download="WGA">Download Now</a>
 
-        <a href="D:\Divers\Automator\Web\wakpd.github.io" class="ghub"><iconify-icon icon="mdi:github"></iconify-icon> </a>
+        <a href="https://github.com/WakPd/WakGamesAutomator" class="ghub"><iconify-icon icon="mdi:github"></iconify-icon> </a>
     </div>
 
 </body>
